--- a/gwtp-core/gwtp-all/pom.xml
+++ b/gwtp-core/gwtp-all/pom.xml
@@ -45,6 +45,11 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>gwtp-dispatch-server-atmosphere</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>gwtp-dispatch-server-guice</artifactId>
             <scope>compile</scope>
         </dependency>
