--- a/gwtp-core/gwtp-dispatch-server-atmosphere/pom.xml
+++ b/gwtp-core/gwtp-dispatch-server-atmosphere/pom.xml
@@ -11,6 +11,10 @@
     <artifactId>gwtp-dispatch-server-atmosphere</artifactId>
     <name>GWTP Dispatch Server Atmosphere Base</name>
 
+    <properties>
+        <atmosphere.version>1.1.0-SNAPSHOT</atmosphere.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.gwtplatform</groupId>
@@ -33,12 +37,25 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-poll</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>${atmosphere.version}</version>
         </dependency>
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-guice</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>${atmosphere.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.atmosphere</groupId>
+            <artifactId>atmosphere-jersey</artifactId>
+            <version>${atmosphere.version}</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.sun.jersey.contribs</groupId>
+                    <artifactId>jersey-guice</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </project>
